# databricks-airport-digital-twin

./: .gitignore  CLAUDE.md  GIT_COMMIT  LICENSE  README.md  REPORT_output.md  SECURITY_AUDIT.md  app.yaml  databricks.yml  deploy.sh  dev.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.planning/: CLAUDE.md  EVENT_CATALOG.md  EVENT_CATALOG_TESTER.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  adding-new-airport.md  backend-deep-review-2026-03-20.md  backend-review-v3-2026-03-20.md  defect-report-asa448-lifecycle.md  ux-audit-2026-03-20.md  ux-review-2026-03-21.md
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
app/: __init__.py
config/: overpass_api.json
configs/: overpass_api.json  simulation_ams_7day.yaml  simulation_atl_7day.yaml  simulation_bos_7day.yaml  simulation_cdg_7day.yaml  simulation_clt_7day.yaml  simulation_den_7day.yaml  simulation_dfw_7day.yaml  simulation_dtw_7day.yaml  simulation_dxb_1000.yaml  simulation_dxb_7day.yaml  simulation_ewr_7day.yaml  simulation_fra_1000.yaml  simulation_fra_7day.yaml  simulation_gru_1000.yaml  simulation_gru_7day.yaml  simulation_hkg_7day.yaml  simulation_iah_7day.yaml  simulation_icn_7day.yaml  simulation_jfk_1000.yaml  simulation_jfk_7day.yaml  simulation_jnb_1000.yaml  simulation_jnb_7day.yaml  simulation_kbp_easter_egg.yaml  simulation_las_7day.yaml  simulation_lax_7day.yaml  simulation_lhr_1000.yaml  simulation_lhr_7day.yaml  simulation_mco_7day.yaml  simulation_mia_7day.yaml  simulation_msp_7day.yaml  simulation_nrt_1000.yaml  simulation_nrt_7day.yaml  simulation_ord_7day.yaml  simulation_pdx_7day.yaml  simulation_phl_7day.yaml  simulation_phx_7day.yaml  simulation_san_7day.yaml  simulation_sea_7day.yaml  simulation_sfo_1000.yaml  (+7 more)
dashboards/: flight_metrics.lvdash.json
databricks/: dlt_pipeline_config.json  genie_space_config.json  setup_metric_views.sql  setup_unity_catalog.sql
docs/: AIRCRAFT_INPAINTING.md  AIRCRAFT_SEPARATION.md  AIRPORT_DATA_IMPORT.md  AIRPORT_DATA_SOURCES_AND_KPIS.md  ASSISTANT_ARCHITECTURE.md  BACKUP_AND_RESTORE.md  BRANDING_GUIDE.md  DATABRICKS_DEPENDENCIES_EU.md  DATA_DICTIONARY.md  DELTA_SHARING.md  DEVELOPMENT_PHILOSOPHY.md  FLIFO_CONFIGURATION.md  LICENSE_AUDIT.md  ML_MODELS.md  MSFS_BGL_IMPORT.md  OBT_PIPELINE.md  OPENSKY_INTEGRATION.md  PIPELINE.md  PRODUCTION_DEPLOYMENT.md  ROADMAP_V2.md  SECURITY_AUDIT.md  SIMULATION_GUIDE.md  SPECIFICATION.md  SYNTHETIC_DATA_GENERATION.md  UC_VOLUMES.md  USER_GUIDE.md  V2_IMPLEMENTATION_REPORT.md  external_api_calls.md  simulation_user_guide.md
notebooks/: test_congestion_prediction.ipynb  test_delay_prediction.ipynb  test_gate_recommendation.ipynb  test_inpainting_endpoint.ipynb
prompts/: simulation_report.md
reports/: capture_screenshots.js  capture_screenshots.py  realism_validation.json  realism_validation_intl.json  report_dxb_sandstorm.md  report_jfk_winter_storm.md  report_sfo_thunderstorm.md  trajectory_validation_report.py
resources/: app.yml  calibration_batch_job.yml  calibration_profiles_volume.yml  calibration_refresh_job.yml  dashboard.yml.bak  demo_volume.yml  e2e_smoke_test_job.yml  inpainting_registration_job.yml  inpainting_serving.yml  inpainting_serving.yml.disabled  integration_test_job.yml  lakebase.yml  lakebase_sync_job.yml  ml_endpoint_test_job.yml  obt_training_job.yml  opensky_enrichment_job.yml  opensky_evaluation_job.yml  opensky_ingestion_job.yml  opensky_volume.yml  osm_preload_job.yml  pipeline.yml  profile_sync_job.yml  realism_scorecard_job.yml  simulation_batch_job.yml  simulation_data_volume.yml  static_assets_volume.yml  sync_job.yml  turnaround_training_job.yml  unit_test_job.yml
scenarios/: ams_north_sea_storm.yaml  atl_summer_thunderstorm.yaml  bos_noreaster.yaml  cdg_winter_fog_freezing.yaml  clt_derecho.yaml  den_spring_blizzard.yaml  dfw_tornado_outbreak.yaml  dtw_lake_effect_blizzard.yaml  dxb_sandstorm.yaml  ewr_ice_storm.yaml  fra_winter_crosswind.yaml  gru_tropical_storm.yaml  hkg_typhoon_signal8.yaml  iah_hurricane_approach.yaml  icn_monsoon_typhoon.yaml  jfk_winter_storm.yaml  jnb_summer_thunderstorm.yaml  las_haboob.yaml  lax_santa_ana_winds.yaml  lhr_winter_fog.yaml  mco_thunderstorm_complex.yaml  mia_tropical_storm.yaml  msp_arctic_blast.yaml  nrt_typhoon.yaml  ord_winter_blizzard.yaml  pdx_atmospheric_river.yaml  phl_summer_thunderstorm.yaml  phx_extreme_heat_dust.yaml  (+10 more)
(+2217 files in other folders)
