[project]
name = "airport-digital-twin"
version = "0.1.0"
description = "Airport Digital Twin - Real-time flight data visualization with Databricks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Airport Digital Twin Team"}
]
dependencies = [
    "requests>=2.31",
    "pydantic>=2.5",
    "tenacity>=8.2",
    "circuitbreaker>=1.4",
    "Faker>=22.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    # Data serving layer
    "databricks-sql-connector>=3.0.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
