[project]
name = "airport-digital-twin"
version = "0.1.0"
description = "Airport Digital Twin - Real-time flight data visualization with Databricks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Airport Digital Twin Team"}
]
dependencies = [
    "requests>=2.31",
    "pydantic>=2.5",
    "tenacity>=8.2",
    "circuitbreaker>=1.4",
    "Faker>=22.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    # Data serving layer
    "databricks-sql-connector>=3.0.0",
    "psycopg2-binary>=2.9.9",
    # Airport format parsers
    "lxml>=5.0.0",
    "defusedxml>=0.7.0",
    # Simulation config
    "pyyaml>=6.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.4",
    "catboost>=1.2",
    "openap>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
# Optional: IFC parsing (requires system dependencies)
# Install with: pip install airport-digital-twin[formats]
formats = [
    "ifcopenshell>=0.8.0",
    "trimesh>=4.0.0",
]

video = ["playwright>=1.40"]

# Aircraft removal from satellite imagery (YOLO detection + LaMa inpainting)
# NOTE: iopaint pins fastapi==0.108.0 — install in a separate venv
# or only in the Databricks serving endpoint container.
# inpainting = [
#     "iopaint>=1.4",
#     "ultralytics>=8.0",
#     "opencv-python-headless>=4.8",
# ]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
